Added Servlet functionality